Added pagination Activeted Entity Generator Created tests for Criteria, FilterParams